header on scroll fix jump

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -15,6 +15,14 @@
 .page__body {
   min-height: 100%;
   font-size: 16px;
+
+  &.scroll {
+    margin-top: 71px;
+    
+    @include rwd(1221) {
+      margin-top: 168px;
+    }
+  }
 }
 
 .main-wrapper {
